--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -6,3 +6,5 @@
   <input  type="text" name="question">
   <input type="submit" value="Ask!" class="btn-primary btn-round-right">
 </form>
+
+<%# //test %>
