--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,8 +1,8 @@
 <h1>Stupid Coaching</h1>
 
-<p>Ask your coach anything</p>
-<form action="/answer" data-turbo="false" method="get" class="flexbox">
 
-  <input  type="text" name="question">
+<form action="/answer" data-turbo="false" method="get" class="flexbox">
+  <label for="question">Ask your coach anything</label>
+  <input id="question" type="text" name="question">
   <input type="submit" value="Ask!" class="btn-primary btn-round-right">
 </form>
